--- a/src/main/webapp/static_resources/customer/css/login.css
+++ b/src/main/webapp/static_resources/customer/css/login.css
@@ -29,7 +29,7 @@ text-align:center;
 }
 .loginbtn{
 	float:right;
-	margin-right:10%;
+	margin-right:20%;
 }
 
 .form-control{
@@ -65,19 +65,21 @@ text-align:center;
 	border-radius:5px;
 }
 .loginBox {
-	margin-top:5%;
-	margin-left:10%;
+	margin-top:10%;
+	margin-left:25%;
+	margin-right:25%;
 	height: auto;
-	width: 100%;
+	width: auto;
 	background:rgba(115, 106, 106, 0.38);
 	color:#FFF;
 	border-radius:20px;
 }
 .loginBox:hover {
-	margin-top:5%;
-	margin-left:10%;
+	margin-top:10%;
+	margin-left:25%;
+	margin-right:25%;
 	height: auto;
-	width: 100%;
+	width: auto;
 	background:rgba(115, 106, 106, 0.5);
 	color:#FFF;
 	border-radius:20px;
