--- a/src/main/webapp/static_resources/customer/css/login.css
+++ b/src/main/webapp/static_resources/customer/css/login.css
@@ -65,27 +65,23 @@ text-align:center;
 	border-radius:5px;
 }
 .loginBox {
-	margin-top:10%;
-	margin-left:25%;
-	margin-right:25%;
-	height: auto;
-	width: auto;
+	
+	
+	
 	background:rgba(115, 106, 106, 0.38);
 	color:#FFF;
 	border-radius:20px;
 }
 .loginBox:hover {
-	margin-top:10%;
-	margin-left:25%;
-	margin-right:25%;
-	height: auto;
-	width: auto;
+	
+	
+	
 	background:rgba(115, 106, 106, 0.5);
 	color:#FFF;
 	border-radius:20px;
 }
-
+html{height:100%; }
 body {
 	background: url(/static_resources/images/Login_backGround.png) fixed center center no-repeat;
-	background-size: cover;
+	background-size:100% 100%;
 }
